Add artifact metadata update event and artifact delete event