@@ -3,7 +3,6 @@ package io.apicurio.registry.event;
 import io.apicurio.registry.utils.tests.DebeziumContainerResource;
 import io.quarkus.test.junit.QuarkusTestProfile;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -11,7 +10,8 @@ public class EventsTestProfile implements QuarkusTestProfile {
 
     @Override
     public Map<String, String> getConfigOverrides() {
-        return Collections.singletonMap("apicurio.storage.sql.kind", "postgresql");
+        return Map.of("apicurio.storage.sql.kind", "postgresql", "apicurio.rest.deletion.artifact.enabled",
+                "true", "apicurio.rest.deletion.artifact-version.enabled", "true");
     }
 
     @Override
